src/test/ui/reachable/unwarned-match-on-never.stderr
error: unreachable expression
  --> $DIR/unwarned-match-on-never.rs:10:5
   |
LL |     match x {}
   |           - any code following this expression is unreachable
LL |     // But matches in unreachable code are warned.
LL |     match x {}
   |     ^^^^^^^^^^ unreachable expression
   |
note: the lint level is defined here
  --> $DIR/unwarned-match-on-never.rs:1:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable arm
  --> $DIR/unwarned-match-on-never.rs:15:15
   |
LL |     match (return) {
   |           -------- any code following this expression is unreachable
LL |         () => ()
   |               ^^ unreachable arm

error: unreachable expression
  --> $DIR/unwarned-match-on-never.rs:21:5
   |
LL |       return;
   |       ------ any code following this expression is unreachable
LL | /     match () {
LL | |         () => (),
LL | |     }
   | |_____^ unreachable expression

error: aborting due to 3 previous errors

